--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@ description: Blog of Alexander Solovyov
 
 <div class="chat greyback">
   <div class="messages mine">
-      <template data-after="500">
-        <img class="avatar" style="flex: 0 0 64px; width: 64px" src="{{ version . "static/asolovyov.jpg" }}">
-      </template>
+    <template data-after="500">
+      <img class="avatar" style="flex: 0 0 64px" height="64" width="64" src="{{ version . "static/asolovyov.jpg" }}">
+    </template>
     <div>
       <template data-after="500">
-      <div class="message">
-        Hi! 🙂 I'm Alexander Solovyov
-      </div>
+        <div class="message">
+          Hi! 🙂 I'm Alexander Solovyov
+        </div>
       </template>
       <template data-after="1500">
         <div class="message">
